--- a/cfbook.tex
+++ b/cfbook.tex
@@ -74,6 +74,10 @@ Printing history:
 
 \begin{description}
 
+\item[October 2013:] Major revision to Chapters 13 and 14
+to switch to JSON and use OAuth.
+Added new chapter on Visualization.
+
 \item[September 2013:] Published book on Amazon CreateSpace
 
 \item[January 2010:] Published book using the University of 
@@ -181,17 +185,19 @@ possible and have a series of running examples and exercises
 about data analysis from the very beginning.  
 
 The chapters 2-10 are similar to the \emph{Think Python} book
-but there have been some changes.  Nearly all number-oriented
+but there have been major changes.  Number-oriented examples and
 exercises have been replaced with data-oriented exercises.
 Topics are presented in the order to needed to build increasingly
 sophisticated data analysis solutions.  Some topics like {\tt try} and
 {\tt except} are pulled forward and presented as part of the chapter
-on conditionals while other concepts like functions are left until 
+on conditionals.  Functions are given very light treatment until 
 they are needed to handle program complexity rather introduced 
-as an early lesson in abstraction.  The word ``recursion'' does not 
-appear in the book at all.
+as an early lesson in abstraction.  Nearly all user-defined functions
+have been removed from the example code and excercises outside Chapter 4.
+The word ``recursion''\footnote{\url{Except of course for this line.}}.
+does not appear in the book at all.
 
-In chapters 1 and 11-15, all of the material is brand new, focusing
+In chapters 1 and 11-16, all of the material is brand new, focusing
 on real-world uses and simple examples of Python for data analysis 
 including regular expressions for searching and parsing, 
 automating tasks on your computer, retrieving data across 
