A round of spell checking with Excalibur.

--- a/book.tex
+++ b/book.tex
@@ -6235,7 +6235,7 @@ Rewrite the program that prompts the user for a list of
 numbers and prints out the maximum and minimum of the
 numbers at the end when the user enters ``done''.  Write
 the program to store the numbers the user enters in a list
-and use the {\tt max()} and {\tt min()} fuctions to 
+and use the {\tt max()} and {\tt min()} functions to 
 compute the maximum and minimum numbers after the 
 loop completes.
 
@@ -7052,7 +7052,7 @@ Enter a file name: mbox-short.txt
 \index{sequence}
 
 A tuple\footnote{Fun fact: The word ``tuple'' comes from the names
-given to seqences of numbers of varying lengths: single, 
+given to sequences of numbers of varying lengths: single, 
 double, triple, quadruple, quituple, sextuple, septuple, etc.}
 is a sequence of values much like a list.  
 The values stored in a tuple can be any type, and
@@ -7229,7 +7229,7 @@ This feature lends itself to a pattern called {\bf DSU} for
 \item[Decorate] a sequence by building a list of tuples
 with one or more sort keys preceding the elements from the sequence,
 
-\item[Sort] the list of tuples uring the Python built-in {\tt sort}, and
+\item[Sort] the list of tuples using the Python built-in {\tt sort}, and
 
 \item[Undecorate] by extracting the sorted elements of the sequence.
 
