--- a/book.tex
+++ b/book.tex
@@ -2751,7 +2751,7 @@ This type of flow is called a {\bf loop} because the third step
 loops back around to the top.  Each time we execute the body of 
 the loop, we call it an {\bf iteration}.  For the above loop, we 
 would say, ``It had five iterations'' which means that the body of
-of the loop was executed five times.
+the loop was executed five times.
 
 \index{condition}
 \index{loop}
