Switch from jsonp to js because if IE :(

--- a/cfbook.tex
+++ b/cfbook.tex
@@ -5409,12 +5409,12 @@ in the file {\bf gword.py}:
 \beforeverb
 \begin{verbatim}
 Range of counts: 33229 129
-Output written to gword.jsonp
+Output written to gword.js
 \end{verbatim}
 \afterverb
 %
 
-This produces the file {\bf gword.jsonp} which you can visualize using
+This produces the file {\bf gword.js} which you can visualize using
 {\bf gword.htm} to produce a word cloud similar to the one at the beginning 
 of this section.
 
@@ -5428,11 +5428,11 @@ Top 10 Oranizations
 ['gmail.com', 'umich.edu', 'uct.ac.za', 'indiana.edu', 
 'unicon.net', 'tfd.co.uk', 'berkeley.edu', 'longsight.com', 
 'stanford.edu', 'ox.ac.uk']
-Output written to gline.jsonp
+Output written to gline.js
 \end{verbatim}
 \afterverb
 %
-Its output is written to {\bf gline.jsonp} which is visualized using {\bf gline.htm}.
+Its output is written to {\bf gline.js} which is visualized using {\bf gline.htm}.
 
 \beforefig
 \centerline{\includegraphics[height=2.50in]{figs2/mailorg.eps}}
