--- a/cfbook.tex
+++ b/cfbook.tex
@@ -3235,7 +3235,7 @@ As the Twitter API became increasingly valuable, Twitter
 went from an open and public API to an API that required
 the use of OAuth signatures on each API request. Thankfully
 there are a number of convenient and free OAuth libraries
-are available 
+
 so you can avoid writing an OAuth implementation from scratch
 by reading the specification.  These libraries are of 
 varying complexity and have varying 
@@ -4425,7 +4425,7 @@ Depending on whether or not the person is already
 in the {\tt People} table, we either need to: 
 (1) look up the person in the {\tt People} table and 
 retrieve the {\tt id} value for the person 
-or (2) add the person the {\tt People} table and get the 
+or (2) add the person to the {\tt People} table and get the 
 {\tt id} value for the newly added row.
 
 \item Insert the row that captures the ``follows'' relationship.
@@ -5035,7 +5035,7 @@ want to check the JavaScript or developer console for your browser.
 
 In this application, we will perform some of the functions of a search
 engine.   We will first spider a small subset of the web and then run
-a Simplified version of the Google page rank algorithm to
+a simplified version of the Google page rank algorithm to
 determine which pages are most highly connected and then visualize
 the page rank and connectivity of our small corner of the web.
 We will use the D3 JavaScript visualization library 
