--- a/book.tex
+++ b/book.tex
@@ -467,7 +467,7 @@ linking them end-to-end.  For example:
 \end{verbatim}
 \afterverb
 %
-The output of this program is {\tt throatwarbler}.
+The output of this program is {\tt 100150}.
 
 \section{Asking the user for input}
 \index{keyboard input}
