Use reserved words listing from chapter 2.

--- a/cfbook.tex
+++ b/cfbook.tex
@@ -642,12 +642,13 @@ Python incudes the following:
 
 \beforeverb
 \begin{verbatim}
-and   del   for   is   raise 
-assert   elif   from   lambda   return 
-break   else   global   not   try 
-class   except   if   or   while 
-continue   exec   import   pass   yield 
-def   ﬁnally   in   print 
+and       del       from      not       while    
+as        elif      global    or        with     
+assert    else      if        pass      yield    
+break     except    import    print              
+class     exec      in        raise              
+continue  finally   is        return             
+def       for       lambda    try
 \end{verbatim}
 \afterverb
 %
