Deleted a wrong colon.

--- a/cfbook.tex
+++ b/cfbook.tex
@@ -684,7 +684,7 @@ that you consult \url{www.pythonlearn.com} where I have detailed
 instructions and screencasts of setting up and starting Python 
 on Macintosh and Windows systems.  At some point, you will be in 
 a terminal or command window and you will type {\bf python} and 
-the Python interpreter will start executing in interactive mode:
+the Python interpreter will start executing in interactive mode
 and appear somewhat as follows:
 \index{interactive mode}
 
