Added missing 'n' and 'at the '.

--- a/cfbook.tex
+++ b/cfbook.tex
@@ -1169,7 +1169,7 @@ be if you were giving a person directions to a restaurant and said, ``... when y
 the intersection with the gas station, turn left and go one mile and the restaurant
 is a red building on your left.''.  Your friend is very late and calls you to tell you that
 they are on a farm and walking around behind a barn, with no sign of a restaurant.  
-The you say ``did you turn left or right gas station?'' and 
+Then you say ``did you turn left or right at the gas station?'' and 
 they say, ``I followed your directions perfectly, I have 
 them written down, it says turn left and go one mile at the gas station.''.  Then you say,
 ``I am very sorry, because while my instructions were syntactically correct, they 
