Added missing 'that '.

--- a/cfbook.tex
+++ b/cfbook.tex
@@ -1184,7 +1184,7 @@ do exactly what you have asked.
 
 As you progress through the rest of the book, don't be afraid if the concepts 
 don't seem to fit together well the first time.  When you were learning to speak, 
-it was not a problem  for your first few years you just made cute gurgling noises.
+it was not a problem  for your first few years that you just made cute gurgling noises.
 And it was OK if it took six months for you to move from simple vocabulary to 
 simple sentences and took 5-6 more years to move from sentences to paragraphs, and a
 few more years to be able to write an interesting complete short story on your own.
