Added missing 'to '.

--- a/cfbook.tex
+++ b/cfbook.tex
@@ -1211,7 +1211,7 @@ a beautiful sculpture.
 
 If something seems particularly hard, there is usually no value in staying up all 
 night and staring at it.   Take a break, take a nap, have a snack, explain what you 
-are having a problem with to someone (or perhaps your dog), and then come back it with
+are having a problem with to someone (or perhaps your dog), and then come back to it with
 fresh eyes.  I assure you that once you learn the programming concepts in the book
 you will look back and see that it was all really easy and elegant and it simply 
 took you a bit of time to absorb it.
