--- a/book.tex
+++ b/book.tex
@@ -179,6 +179,8 @@ see why later).
 The underscore character (\verb"_") can appear in a name.
 It is often used in names with multiple words, such as
 \verb"my_name" or \verb"airspeed_of_unladen_swallow".
+Variable names can start with an underscore character, but
+that is used less often.
 
 \index{underscore character}
 
