--- a/book.tex
+++ b/book.tex
@@ -180,7 +180,8 @@ The underscore character (\verb"_") can appear in a name.
 It is often used in names with multiple words, such as
 \verb"my_name" or \verb"airspeed_of_unladen_swallow".
 Variable names can start with an underscore character, but
-that is used less often.
+we generally avoid using it unles we are writing library 
+code for others to use.
 
 \index{underscore character}
 
