Caught a few more typos.

--- a/cfbook.tex
+++ b/cfbook.tex
@@ -1396,7 +1396,7 @@ How do you fix a "Syntax Error"?
 \chapter{Regular expressions}
 
 So far we have been reading through files, looking for patterns and extracting various bits of lines that we find interesting.  We have been using string methods like {\tt split} and {\tt find} and using lists and string slicing to extract portions of the lines.
-\index{regular expressons}
+\index{regular expressions}
 \index{regex}
 \index{re module}
 
@@ -2187,7 +2187,7 @@ documents and data over the web.
 \index{urllib!image}
 \index{image!jpg}
 \index{jpg}
-In the above example, we retreived a plain text file 
+In the above example, we retrieved a plain text file 
 which had newlines in the file and we simply copied the
 data to the screen as the program ran.   We can use a similar
 program to retrieve an image across using HTTP.   Instead
@@ -2267,7 +2267,7 @@ the file {\tt stuff.jpg} in an image viewer.
 As the program runs, 
 can see that we don't get 5120 characters each time we 
 call the {\tt recv()} method.
-We get as many characters that have been transfered across the network 
+We get as many characters that have been transferred across the network 
 to us by the web server at the moment we call {\tt recv()}.  
 In this example, we either get 1460 or
 2920 characters each time we request up to 5120 characters of data.
