--- a/book.tex
+++ b/book.tex
@@ -3738,8 +3738,8 @@ say that we are invoking {\tt upper} on the {\tt word}.
 
 \index{invocation}
 
-As it turns out, there is a string method named {\tt find} that
-is remarkably similar to the function we wrote:
+For example, there is a string method named {\tt find} that
+searches for the position of one string within another:
 
 \beforeverb
 \begin{verbatim}
@@ -3753,8 +3753,7 @@ is remarkably similar to the function we wrote:
 In this example, we invoke {\tt find} on {\tt word} and pass
 the letter we are looking for as a parameter.
 
-Actually, the {\tt find} method is more general than our function;
-it can find substrings, not just characters:
+The {\tt find} method can find substrings, not just characters:
 
 \beforeverb
 \begin{verbatim}
@@ -4186,7 +4185,7 @@ In this chapter, we start to work with {\bf Secondary Memory}
 (or files).
 Secondary memory is not erased even when the power is turned off.  
 Or in the case of a USB flash drive, the
-data can we write from our programs can be removed from the 
+data we write from our programs can be removed from the 
 system and transported to another system.
 
 We will primarily focus on reading and writing text files such as 
