--- a/08-lists.tex
+++ b/08-lists.tex
@@ -700,7 +700,7 @@ There are two possible states:
 \index{aliasing}
 
 \beforefig
-\centerline{\includegraphics{figs/list1.eps}}
+\centerline{\includegraphics{figs2/list1.eps}}
 \afterfig
 
 In one case, {\tt a} and {\tt b} refer to two different objects that
