--- a/01-intro.tex
+++ b/01-intro.tex
@@ -190,7 +190,7 @@ In a sense, you need two skills to be a programmer:
 
 \item First you need to know the programming language (Python) -
 you need to know the vocabulary and the grammar.  You need to be able 
-spell the words in this new language properly and how to construct 
+to spell the words in this new language properly and how to construct 
 well-formed ``sentences'' in this new languages.
 
 \item Second you need to ``tell a story''.  In writing a story,
@@ -575,7 +575,7 @@ interactively.
 
 You will notice that there was no need to have {\bf quit()} at the end of
 the Python program in the file.   When Python is reading your source code
-form a file, it knows to stop when it reaches the end of the file.
+from a file, it knows to stop when it reaches the end of the file.
 
 \section{What is a program?}
 
