--- a/00-preface.tex
+++ b/00-preface.tex
@@ -42,10 +42,10 @@ possible and have a series of running examples and exercises
 about data analysis from the very beginning.  
 
 The chapters 2-10 are similar to the \emph{Think Python} book
-but there have been major changes.  Number-oriented examples and
+but there have been major changes. Number-oriented examples and
 exercises have been replaced with data-oriented exercises.
-Topics are presented in the order to needed to build increasingly
-sophisticated data analysis solutions.  Some topics like {\tt try} and
+Topics are presented in the order needed to build increasingly
+sophisticated data analysis solutions. Some topics like {\tt try} and
 {\tt except} are pulled forward and presented as part of the chapter
 on conditionals.  Functions are given very light treatment until 
 they are needed to handle program complexity rather introduced 
