--- a/02-variables.tex
+++ b/02-variables.tex
@@ -45,7 +45,7 @@ If you are not sure what type a value has, the interpreter can tell you.
 \afterverb
 %
 Not surprisingly, strings belong to the type {\tt str} and
-integers belong to the type {\tt int}.  Less obviously, numbers
+integers belong to the type {\tt int}.  Less obvious, numbers
 with a decimal point belong to a type called {\tt float},
 because these numbers are represented in a
 format called {\bf floating-point}.
