--- a/08-lists.tex
+++ b/08-lists.tex
@@ -1283,7 +1283,7 @@ You will parse the From line and print out the second word for
 each From line and then you will also count the number of 
 From (not From:) lines and print out a count at the end.
 
-This is a sample good output with a few lines removed:
+This is a good sample output with a few lines removed:
 
 \beforeverb
 \begin{verbatim}
